--- a/designLibrary/src/main/res/values/dimens.xml
+++ b/designLibrary/src/main/res/values/dimens.xml
@@ -4,28 +4,11 @@
   -->
 
 <resources>
+    <dimen name="dimen_2">2dp</dimen>
     <dimen name="dimen_4">4dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
 
     <!--textSize-->
-    <dimen name="font_1">1sp</dimen>
-    <dimen name="font_3">3sp</dimen>
-    <dimen name="font_6">6sp</dimen>
-    <dimen name="font_8">8sp</dimen>
-    <dimen name="font_9">9sp</dimen>
-    <dimen name="font_10">10sp</dimen>
-    <dimen name="font_11">11sp</dimen>
-    <dimen name="font_12">12sp</dimen>
-    <dimen name="font_13">13sp</dimen>
-    <dimen name="font_14">14sp</dimen>
     <dimen name="font_15">15sp</dimen>
-    <dimen name="font_16">16sp</dimen>
-    <dimen name="font_17">17sp</dimen>
-    <dimen name="font_18">18sp</dimen>
-    <dimen name="font_20">20sp</dimen>
-    <dimen name="font_24">24sp</dimen>
-    <dimen name="font_26">26sp</dimen>
-    <dimen name="font_22">22sp</dimen>
-    <dimen name="font_40">40sp</dimen>
 
 </resources>
