--- a/app/src/main/res/layout/fragment_button_demo.xml
+++ b/app/src/main/res/layout/fragment_button_demo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +11,8 @@
         android:id="@+id/btn_sehatq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
         android:layout_gravity="center_horizontal"
+        android:padding="@dimen/dimen_10"
         android:stateListAnimator="@null"
         android:text="@string/sehatq_button_primary"
         android:textAllCaps="false" />
@@ -25,42 +24,42 @@
         android:background="@color/black" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_marginTop="@dimen/dimen_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button Color"/>
+        android:layout_marginTop="@dimen/dimen_4"
+        android:text="@string/button_color" />
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/spinner_button_color"
-        android:layout_marginTop="@dimen/dimen_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_marginTop="@dimen/dimen_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button Type"/>
+        android:layout_marginTop="@dimen/dimen_4" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_4"
+        android:text="@string/button_type" />
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/spinner_button_type"
-        android:layout_marginTop="@dimen/dimen_4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_4" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/cb_button_enable"
-        android:layout_marginTop="@dimen/dimen_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_4"
         android:checked="true"
-        android:text="Enable Button"/>
+        android:text="@string/enable_button" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/cb_button_shadow"
-        android:layout_marginTop="@dimen/dimen_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shadow Button"/>
+        android:layout_marginTop="@dimen/dimen_4"
+        android:text="@string/shadow_button" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
