remove StateListAnimator attribute so no need to define it.

--- a/designLibrary/src/main/res/values/attrs.xml
+++ b/designLibrary/src/main/res/values/attrs.xml
@@ -7,6 +7,7 @@
         <attr name="buttonColor" format="color" />
         <attr name="cornerRadius" format="dimension" />
         <attr name="borderEnable" format="boolean" />
+        <attr name="shadowEnable" format="boolean" />
         <attr name="buttonType" format="string" />
     </declare-styleable>
 </resources>
