--- a/app/src/main/res/layout/fragment_button_demo.xml
+++ b/app/src/main/res/layout/fragment_button_demo.xml
@@ -12,9 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:padding="@dimen/dimen_10"
-        android:text="@string/sehatq_button_primary"
-        android:textAllCaps="false" />
+        android:text="@string/sehatq_button_primary" />
 
     <View
         android:layout_width="match_parent"
