--- a/designLibrary/src/main/res/values/dimens.xml
+++ b/designLibrary/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="dimen_4">4dp</dimen>
     <dimen name="dimen_8">8dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
 
     <!--textSize-->
     <dimen name="font_15">15sp</dimen>
